@@ -9,6 +9,14 @@
 	  likely to happen while in combat, I disabled moving aside while in combat
 	  as a workaround (the rationale being that you are too busy fighting to
 	  play nice).
+	Rev 7230:
+	* combat.cc: Reverted changes from rev 7229 to fix bug #3598684 "problems
+	  attacking medium and large actors (7229 regression)".
+	* paths.cc: Speed improvements for Fast_pathfinder_client::is_grabable.
+	  Fast_pathfinder_client::is_straight_path will no longer prematurely quit
+	  before the end of the path.
+	* rect.h: Truly fixed Fixed bug #3594342 "Attacking through walls and doors"
+	  (and who knows how many other bugs).
 
 2012-12-27	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* all: Removed ungodly amount of uneeded data copies when passing tiles and
